@@ -19,6 +19,10 @@
 | | Description | PR
 
 | 🐣
+| Separate PodSpecFlags from Service ConfigurationEditFlags
+| https://github.com/knative/client/pull/915[#915]
+
+| 🐣
 | Allow the kn test image to be customized via environment variable
 | https://github.com/knative/client/pull/957[#957]
 
